# chat-bi

./: .env  README.md  app_chainlit.py  app_gradio.py  app_streamlit.py  app_vanna.py  chat_bi.py  config.py  pyproject.toml  schema_sqlite.sql  test.py  test_langchain.py
.chainlit/: config.toml
data/: chat_sessions.db
mcp_servers/: __init__.py  db_hive.py  db_mysql.py  db_postgresql.py
tools/: code.py  weather.py
